// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card render without data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="flip-card"
        >
          <div
            class="flip-card-inner"
          >
            <div
              class="card-container flip-card-front"
            >
              <div
                class="image-container"
              >
                <img
                  class="card-image"
                />
              </div>
              <div
                class="card-artist"
              />
              <div
                class="card-time"
              >
                <time
                  datetime="1587894375302"
                >
                  Sun 26th Apr, 10:46
                </time>
              </div>
              <div
                class="card-title"
              />
              <div
                class="calendar-wrapper"
              >
                <div
                  class="react-add-to-calendar"
                >
                  <div
                    class="react-add-to-calendar__wrapper"
                  >
                    <a
                      class="react-add-to-calendar__button"
                    >
                      <span>
                        Add to Calendar 
                        <i
                          class="react-add-to-calendar__icon--right fa fa-caret-down"
                        />
                      </span>
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="card-container flip-card-back"
            >
              <div
                class="card-title back"
              />
              <div
                class="description-container"
              />
              <div
                class="countdown-container"
              />
              <a
                class="event-link"
              >
                Watch here!
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="flip-card"
      >
        <div
          class="flip-card-inner"
        >
          <div
            class="card-container flip-card-front"
          >
            <div
              class="image-container"
            >
              <img
                class="card-image"
              />
            </div>
            <div
              class="card-artist"
            />
            <div
              class="card-time"
            >
              <time
                datetime="1587894375302"
              >
                Sun 26th Apr, 10:46
              </time>
            </div>
            <div
              class="card-title"
            />
            <div
              class="calendar-wrapper"
            >
              <div
                class="react-add-to-calendar"
              >
                <div
                  class="react-add-to-calendar__wrapper"
                >
                  <a
                    class="react-add-to-calendar__button"
                  >
                    <span>
                      Add to Calendar 
                      <i
                        class="react-add-to-calendar__icon--right fa fa-caret-down"
                      />
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="card-container flip-card-back"
          >
            <div
              class="card-title back"
            />
            <div
              class="description-container"
            />
            <div
              class="countdown-container"
            />
            <a
              class="event-link"
            >
              Watch here!
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Card should render properly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="flip-card"
        >
          <div
            class="flip-card-inner"
          >
            <div
              class="card-container flip-card-front"
            >
              <div
                class="image-container"
              >
                <img
                  class="card-image"
                  src="https://img.src"
                />
              </div>
              <div
                class="card-artist"
              >
                joseph
              </div>
              <div
                class="card-time"
              >
                <time
                  datetime="1587894375302"
                >
                  Sun 26th Apr, 10:46
                </time>
              </div>
              <div
                class="card-title"
              />
              <div
                class="calendar-wrapper"
              >
                <div
                  class="react-add-to-calendar"
                >
                  <div
                    class="react-add-to-calendar__wrapper"
                  >
                    <a
                      class="react-add-to-calendar__button"
                    >
                      <span>
                        Add to Calendar 
                        <i
                          class="react-add-to-calendar__icon--right fa fa-caret-down"
                        />
                      </span>
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="card-container flip-card-back"
            >
              <div
                class="card-title back"
              />
              <div
                class="description-container"
              />
              <div
                class="countdown-container"
              />
              <a
                class="event-link"
              >
                Watch here!
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="flip-card"
      >
        <div
          class="flip-card-inner"
        >
          <div
            class="card-container flip-card-front"
          >
            <div
              class="image-container"
            >
              <img
                class="card-image"
                src="https://img.src"
              />
            </div>
            <div
              class="card-artist"
            >
              joseph
            </div>
            <div
              class="card-time"
            >
              <time
                datetime="1587894375302"
              >
                Sun 26th Apr, 10:46
              </time>
            </div>
            <div
              class="card-title"
            />
            <div
              class="calendar-wrapper"
            >
              <div
                class="react-add-to-calendar"
              >
                <div
                  class="react-add-to-calendar__wrapper"
                >
                  <a
                    class="react-add-to-calendar__button"
                  >
                    <span>
                      Add to Calendar 
                      <i
                        class="react-add-to-calendar__icon--right fa fa-caret-down"
                      />
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="card-container flip-card-back"
          >
            <div
              class="card-title back"
            />
            <div
              class="description-container"
            />
            <div
              class="countdown-container"
            />
            <a
              class="event-link"
            >
              Watch here!
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
